<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/guessinggame"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:text="@string/guesscounter"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:textColor="@color/white"
        android:layout_marginStart="34dp"
        android:layout_marginTop="41dp"
        android:text="@string/numberofguessesleft"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Getter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:textColor="@color/white"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/Guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Getter"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="58dp"
        android:background="@color/colornull"
        android:text="@string/guess"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/guesser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginStart="18dp"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/Guess"
        android:text="@string/counter"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/left_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_above="@+id/Getter"
        android:layout_alignStart="@+id/guesser" />

    <Button
        android:id="@+id/Resetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginBottom="27dp"
        android:background="@color/resetbtn"
        android:text="@string/resetbutton"
        android:textStyle="bold" />
</RelativeLayout>
